--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
+        <li routerLinkActive="active"><a routerLink="/advanced-game">Advanced Game</a></li>
         <li routerLinkActive="active"><a routerLink="/about">About</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
